fix: fix chat
